--- a/its-camera-ai/web/package.json
+++ b/its-camera-ai/web/package.json
@@ -5,8 +5,28 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:check": "next build --no-lint",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
+    "test": "echo \"Tests not yet configured\" && exit 0",
+    "test:unit": "echo \"Unit tests not yet configured\" && exit 0",
+    "test:components": "echo \"Component tests not yet configured\" && exit 0",
+    "test:a11y": "echo \"Accessibility tests not yet configured\" && exit 0",
+    "lighthouse": "echo \"Lighthouse not yet configured\" && exit 0",
+    "analyze:size": "node scripts/check-bundle-size.js",
+    "validate:i18n": "node scripts/validate-i18n.js",
+    "validate:components": "node scripts/validate-components.js",
+    "validate:react-patterns": "node scripts/validate-react-patterns.js",
+    "validate:accessibility": "node scripts/validate-accessibility.js",
+    "validate:translations": "node scripts/check-translation-completeness.js",
+    "validate:all": "npm run validate:i18n && npm run validate:components && npm run validate:react-patterns && npm run validate:accessibility",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install",
     "dev:api": "node scripts/dev-server.js",
     "dev:full": "concurrently \"npm run dev:api\" \"npm run dev\""
   },
@@ -23,6 +43,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-query-devtools": "^5.85.3",
     "@types/d3": "^7.4.3",
     "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.1",
@@ -30,15 +51,18 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "immer": "^10.1.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-intl": "^3.20.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-window": "^1.8.11",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
+    "use-immer": "^0.11.0",
     "web-vitals": "^4.2.4",
     "zod": "^3.24.1",
     "zustand": "^5.0.7"
@@ -59,7 +83,21 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "lint-staged": "^15.2.0",
+    "husky": "^8.0.3",
+    "@lhci/cli": "^0.12.0",
+    "@axe-core/cli": "^4.8.0",
+    "audit-ci": "^6.6.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
