Add integrated performance tests for cache and database optimization
- Implemented comprehensive performance tests for the analytics system, focusing on cache and database interactions.
- Included tests for end-to-end analytics query performance, cache warming effectiveness, and system performance under stress conditions.
- Simulated real-world workloads with 1000+ cameras and validated performance metrics against defined thresholds.
- Established monitoring and alerting performance tests to ensure system stability and responsiveness.

--- a/its-camera-ai/.gitignore
+++ b/its-camera-ai/.gitignore
@@ -419,9 +419,9 @@ models/*.bin
 config.local.json
 
 # Docker
-Dockerfile*
-docker-compose*.yml
-.dockerignore
+# Dockerfile*
+# docker-compose*.yml
+# .dockerignore
 
 # Development tools
 Makefile
