--- a/its-camera-ai/.env.example
+++ b/its-camera-ai/.env.example
@@ -1,12 +1,48 @@
 # Environment Variables for ITS Camera AI
 # Copy this file to .env and update the values for your environment
 
+# =============================================================================
+# DOCKER DEPLOYMENT CONFIGURATION
+# =============================================================================
+# Build configuration
+BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)
+VCS_REF=$(git rev-parse --short HEAD)
+VERSION=1.0.0
+
 # Application Settings
 ENVIRONMENT=development
 DEBUG=true
 LOG_LEVEL=INFO
 APP_NAME=its-camera-ai
 APP_VERSION=0.1.0
+
+# =============================================================================
+# PRODUCTION SECRETS (CHANGE THESE IN PRODUCTION!)
+# =============================================================================
+# PostgreSQL passwords
+POSTGRES_PASSWORD=change_this_secure_password_123!
+POSTGRES_REPLICATION_PASSWORD=change_this_replication_password_456!
+
+# Redis password
+REDIS_PASSWORD=change_this_redis_password_789!
+
+# MinIO credentials for production
+MINIO_ACCESS_KEY=its_camera_ai_access_key
+MINIO_SECRET_KEY=change_this_minio_secret_key_very_long_and_secure
+
+# Application secrets (generate with: openssl rand -hex 32)
+SECRET_KEY=change_this_to_a_very_long_random_secret_key_32_chars_min
+JWT_SECRET_KEY=change_this_jwt_secret_key_also_very_long_and_random
+ENCRYPTION_KEY=change_this_encryption_key_32_chars_exactly!
+
+# Monitoring secrets
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=change_this_grafana_password_secure!
+GRAFANA_SECRET_KEY=change_this_grafana_secret_key_random_32_chars
+GRAFANA_DB_PASSWORD=change_this_grafana_db_password!
+
+# External service credentials
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
 
 # API Configuration
 API_HOST=0.0.0.0
