--- a/its-camera-ai/pyproject.toml
+++ b/its-camera-ai/pyproject.toml
@@ -106,6 +106,11 @@ dependencies = [
     "matplotlib>=3.9.0",
     "aiokafka>=0.12.0",
     "blosc>=1.11.3",
+    # License Plate Recognition
+    "easyocr>=1.7.2",
+    "paddleocr>=2.9.1",
+    "imutils>=0.5.4",
+    "scikit-image>=0.24.0",
 ]
 
 [dependency-groups]
